# Airbnb_price_analysis

./: .gitignore  CLIP.ipynb  README.md  chroma_db2.dvc  ml_pipeline.ipynb  pyproject.toml  search.ipynb  test.csv  train.ipynb
.dvc/: config
GUI/: .gitignore  airbnb_catboost.cmb.dvc  gradio_gui.py
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/fold-0/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/fold-0/learn/: events.out.tfevents
catboost_info/fold-0/test/: events.out.tfevents
catboost_info/fold-1/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/fold-1/learn/: events.out.tfevents
catboost_info/fold-1/test/: events.out.tfevents
catboost_info/fold-2/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/fold-2/learn/: events.out.tfevents
catboost_info/fold-2/test/: events.out.tfevents
catboost_info/fold-3/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/fold-3/test/: events.out.tfevents
catboost_info/fold-4/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
dataset/: .gitignore  current_urls.json.dvc  data.jl.dvc  data.xlsx.dvc  dataset.parquet.dvc  dataset.xlsx.dvc  dataset_temp.parquet.dvc  downloader.py  forCatboost.parquet.dvc  formatting.ipynb  overseer.py  parq.py  urls.json.dvc
dataset/airbnb_scraper/: middlewares.py  settings.py
(+4 files in other folders)
